2013-12-01  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/58410
	* trans-array.c (gfc_alloc_allocatable_for_assignment): Do not
	use the array bounds of an unallocated array but set its size
	to zero instead.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205566 138bc75d-0d04-0410-961f-82ee72b054a4